3. Kubernetes/manifests/01-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: microapp
  labels:
    app: users-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
        tier: backend
    spec:
      containers:
      - name: users-service
        image: hashicorp/http-echo:1.0.0
        args:
        - "-listen=:3001"
        - "-text=users-service | pod: $(POD_NAME) | ip: $(POD_IP) | puerto: 3001\n"
        ports:
        - containerPort: 3001
          name: http-users
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 2
          periodSeconds: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
  labels:
    app: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
