3. Kubernetes/manifests/02-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: microapp
  labels:
    app: products-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
        tier: backend
    spec:
      containers:
      - name: products-service
        image: hashicorp/http-echo:1.0.0
        args:
        - "-listen=:3002"
        - "-text=products-service | pod: $(POD_NAME) | ip: $(POD_IP) | puerto: 3002\n"
        ports:
        - containerPort: 3002
          name: http-products
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 2
          periodSeconds: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: microapp
  labels:
    app: products-service
spec:
  type: ClusterIP
  selector:
    app: products-service
  ports:
  - name: http
    port: 3002
    targetPort: 3002
    protocol: TCP
