3. Kubernetes/manifests/03-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: microapp
  labels:
    app: orders-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
        tier: backend
    spec:
      containers:
      - name: orders-service
        image: hashicorp/http-echo:1.0.0
        args:
        - "-listen=:3003"
        - "-text=orders-service | pod: $(POD_NAME) | ip: $(POD_IP) | puerto: 3003\n"
        ports:
        - containerPort: 3003
          name: http-orders
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 2
          periodSeconds: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
  labels:
    app: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
  - name: http
    port: 3003
    targetPort: 3003
    protocol: TCP
